# gemini-client-rs

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  utils.rs
src/utils/: functions.rs  reader.rs  response.rs
src/utils/functions/: base.rs  get_weather.rs
