[package]
name = "gemini-client"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.7"
image = "0.24.8"
serde_json = "1.0.113"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.30"
json-stream = "0.1.1"
struson = { version = "0.4.1", features = ["experimental"] }
tokio-util = "0.7.10"
